--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,12 @@ gradle-app.setting
 # Cache of project
 .gradletasknamecache
 
+# Other
+target
+build
+
+# MAC
+.DS_Store
+
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
